--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "@swc/core": "^1.6.5",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.9",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "hot-hook": "^0.2.6",
     "pino-pretty": "^11.2.1",
+    "postcss": "^8.4.40",
     "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "~5.4",
     "vite": "^5.3.1"
