--- a/package.json
+++ b/package.json
@@ -63,8 +63,11 @@
     "@adonisjs/vite": "^3.0.0",
     "@vinejs/vine": "^2.1.0",
     "adonis-x-clone": "file:",
+    "date-fns": "^3.6.0",
     "edge.js": "^6.0.2",
+    "infinite-scroll": "^4.0.1",
     "luxon": "^3.4.4",
+    "moment": "^2.30.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2"
   },
