--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "adonis-x-clone": "file:",
     "date-fns": "^3.6.0",
     "edge.js": "^6.0.2",
+    "flowbite": "^2.5.1",
     "infinite-scroll": "^4.0.1",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
